compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_could_not_unify12.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n        pub record Person {\n            Person(name: String, age: Int)\n        }\n\n        pub fn create_person(age: Float) {\n            let x: Person = Person(name: \"Quinn\", age: age)\n            x\n        }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:7:56
  │
7 │             let x: Person = Person(name: "Quinn", age: age)
  │                                                        ^^^

Expected type:

    Int

Found type:

    Float
