compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__module_private_type_leak_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "type PrivateType\n@external(erlang, \"a\", \"b\")\nfn go() -> PrivateType\npub fn leak_type() { [go()] }"
---
----- SOURCE CODE
type PrivateType
@external(erlang, "a", "b")
fn go() -> PrivateType
pub fn leak_type() { [go()] }

----- ERROR
error: Private type used in public interface
  ┌─ /src/one/two.rakun:4:1
  │
4 │ pub fn leak_type() { [go()] }
  │ ^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.
