compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__no_crash_on_duplicate_record_fields.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 2512
expression: "\npub record X {\n  A\n  B(e0: Int, e0: Int)\n}\n\nfn compiler_crash(x: X) {\n  case x {\n    A -> todo\n    _ -> todo\n  }\n}\n  "
---
----- SOURCE CODE

pub record X {
  A
  B(e0: Int, e0: Int)
}

fn compiler_crash(x: X) {
  case x {
    A -> todo
    _ -> todo
  }
}
  

----- ERROR
error: Duplicate label
  ┌─ /src/one/two.rakun:4:14
  │
4 │   B(e0: Int, e0: Int)
  │              ^^

The label `e0` has already been defined. Rename this label.
